--- a/components/Markdown/Markdown.module.css
+++ b/components/Markdown/Markdown.module.css
@@ -6,10 +6,10 @@
   margin-bottom: var(--space-0);
 }
 
+/*
 .headline {
-  margin-bottom: calc(var(--space-s) + var(--space-xs));
 }
 
 .subline {
-  margin-bottom: var(--space-m);
 }
+*/
